alignment fix

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ img.splashGif {
       z-index: 0;
       position:absolute;
       /* top:50%; */
-      left:-820px;
+      left:-850px;
       /* margin-top:-290px; */
       margin-left:50vw;
       overflow: hidden;
